[package]
name = "grsp"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ManiGhazaee/grsp"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
description = "A search tool that recursively searches current directory for a string"
readme = "README.md"
license = "MIT"


[dependencies]
rayon = "1.8.1"
termcolor = "1.4.1"
